Require python-swiftclient that supports timeouts
We now set a 60 second timeout on HTTP operations for Swift.
Previously, and with older versions of python-swiftclient there was no
timeout.  A hung connection that the server forgot about would hang
forever and not allow the backup process to complete.  Or even log an
error about the missed metric.

This should log an exception when a connection is hung / timeout that we
can at least dig out of the log files.  It should also successfully
complete.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+whisper-backup (0.1.1-1) unstable; urgency=medium
+
+  * Build requiring python-swiftclient >= 3.0.0 which includes support
+    for timeouts on the HTTP connections
+
+ -- Jack Neely <jjneely@42lines.net>  Fri, 13 Jan 2017 15:17:51 -0500
+
 whisper-backup (0.1.0-1) unstable; urgency=medium
 
   * Updated pycronscript to 0.2.1
