--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+whisper-backup (0.1.3-1) unstable; urgency=medium
+
+  * Fix purges taking for ever to complete.
+
+ -- Jack Neely <jjneely@42lines.net>  Tue, 21 Mar 2017 11:38:11 -0400
+
 whisper-backup (0.1.2-1) unstable; urgency=medium
 
   * Attempt a 0.1.2 release with some new features that have been
